06-vllm-cpu/qwen3-cpu-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qwen3-cpu-route
  namespace: vllm-cpu
spec:
  parentRefs:
    - name: inference-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway-system
  rules:
    - matches:
        - headers:
            - name: X-SELECTED-MODEL
              value: Qwen/Qwen3-0.6B
      backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: qwen3-cpu-pool
          port: 8000
